--- a/src/app/pages/reportes/reportes.component.html
+++ b/src/app/pages/reportes/reportes.component.html
@@ -29,6 +29,8 @@
                                         <th class="text-center">Agente Asignado</th>
                                         <th class="text-center">Operador</th>
                                         <th>Tipo de Incidente</th>
+                                        <th>Ingresado</th>
+                                        <th>Resuelto</th>
 
                                     </tr>
                                 </thead>
@@ -61,7 +63,7 @@
                                         <td>{{incidente.persona.identificacion}}</td>
                                         <td>
                                             <div class="d-inline-block align-middle">
-                                                <img [src]="incidente.persona.fotoPerfil==null?'assets/img/user.png':incidente.persona.fotoPerfil" alt="user image" class="rounded-circle img-40 align-top mr-15">
+                                                <!--<img [src]="incidente.persona.fotoPerfil==null?'assets/img/user.png':incidente.persona.fotoPerfil" alt="user image" class="rounded-circle img-40 align-top mr-15">-->
                                                 <div class="d-inline-block">
                                                     <h6 class="mb-0">{{incidente.persona.nombres}} {{incidente.persona.apellidos}}</h6>
                                                     <p class="text-muted mb-0">{{incidente.direccion | slice:0:60}}</p>
@@ -83,6 +85,8 @@
                                             <span class="badge badge-pill badge-warning mb-1">Sin Operador</span>
                                         </td>
                                         <td>{{incidente.tipoIncidente.nombre}}</td>
+                                        <td>{{incidente.fechaCreacion | date:'shortDate'}} {{incidente.fechaCreacion | date:'mediumTime'}}</td>
+                                        <td>{{incidente.fechaEdicion | date:'shortDate'}} {{incidente.fechaEdicion | date:'mediumTime'}}</td>
                                     </tr>
                                 </tbody>
                             </table>
